Fix color contrast issue

--- a/assests/css/desktop.css
+++ b/assests/css/desktop.css
@@ -125,7 +125,6 @@
   h2.support-text,
   p.description {
     font-style: normal;
-    background-color: #050505;
   }
 
   h2.support-text,
